2006-08-14 Joerg Wunsch <j@uriah.heep.sax.de>

	* avrdude.conf.in: Add HVSP/PP mode parameters for all AVRs.

2006-08-13 Joerg Wunsch <j@uriah.heep.sax.de>

	* tools: New directory.
	* tools/get-hv-params.xsl: New file, extract high-voltage
	programming parameters from Atmel XML files, and produce
	an avrdude.conf[.in] snippet.

2006-08-11 Joerg Wunsch <j@uriah.heep.sax.de>

	* configure.ac (AC_CHECK_LIB([usb]): implement a private LIBUSB
	macro to add this library to, to prevent it from being
	automatically linked to all binaries.  This should fix the Win32
	build of loaddrv.
	* Makefile.am (avrdude_LDADD): add LIBUSB here.

2006-08-10 Eric B. Weddington <eweddington@cso.atmel.com>

	Contributed by Bob Paddock <graceindustries@gmail.com>
	* avrdude.conf.in: Patch #4780. Provide support for mega325,
	mega3250, mega645, mega6450.

2006-08-10 Joerg Wunsch <j@uriah.heep.sax.de>

	* avrdude.conf.in (ATtiny11): fix the HVSP control stack,
	add delay values required for flash and EEPROM.
	* stk500v2.c: reverse the argument order for
	CMD_CHIP_ERASE_HVSP; AVR068 and stk500.exe differ here.

2006-08-09 Joerg Wunsch <j@uriah.heep.sax.de>

	* stk500v2.c (stk500v2_program_enable): Fix a typo
	(synchloops vs. synchcycles).

2006-08-04 Joerg Wunsch <j@uriah.heep.sax.de>

	* avrdude.conf.in: Add parallel programming definitions for
	the ATmega8/48/88/168.

2006-07-22 Joerg Wunsch <j@uriah.heep.sax.de>

	* avrdude.conf.in: Add the ATtiny11, an HVSP-only device.

2006-07-21 Joerg Wunsch <j@uriah.heep.sax.de>

	Implement STK500 (v2) HVSP mode.
	* stk500v2.c: Add new functions for HVSP support.
	* stk500v2.h: Add prototype for the stk500hvsp programmer.
	* avrpart.h: Add fields to struct avrpart for new features.
	* config_gram.y: Extend the configuration syntax for new
	features required for HVSP support.
	* lexer.l: (Ditto.)
	* avrdude.conf.in: Add HVSP support for ATtiny13 and
	ATtiny45 as an example.
	* avrdude.1: Document stk500hvsp.
	* doc/avrdude.texi: (Ditto.)
